--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li class="animal cat">Lions</li>
       <li class="animal cat">tigers</li>
     <li id="best-animal" class="animal mammal">And bears</li>
-    <li class="animal bird">robin</li>
+    <li class="animal bird">peacock</li>
     <li class="animal bird">tweety</li>
       </ol>
     </section>
